# mozaic-daily

./: .gitignore  CLAUDE.md  Dockerfile-mozaic-daily  Dockerfile-mozaic-daily-naive  Dockerfile-mozaic-daily-slim  Dockerfile-mozaic-daily-wip  Dockerfile-template  README.md  REQUIREMENTS.md  bq_utilities.py  build_and_push.sh  constants.py  debug_mozaic_forecasting.md  minimal_breaking_flow.py  mozaic_daily.py  mozaic_daily_flow.py  mozaic_daily_validation.py  pyproject.toml  requirements.outerbounds.txt  test_cases.md  test_docker.py
docker/: Dockerfile  build_and_push.sh  requirements.outerbounds.txt  run_mozaic_docker.sh  test_docker.py
scripts/: batch_historical_forecasts.py  check_logs.py  combine_forecasts.py  inspect_nulls.py  run_flow.py  run_main.py  run_validation.py  test_local_docker.sh
src/mozaic_daily/: __init__.py  config.py  data.py  forecast.py  main.py  queries.py  reports.py  tables.py  validation.py
test_data/: legacy_desktop_dau.parquet  reproduce_tile_nan_bug.py
tests/: conftest.py  test_config.py  test_data_fetching.py  test_debug_flags.py  test_forecasting.py  test_queries.py  test_run_flow.py  test_smoke.py  test_table_manipulation.py  test_validation.py
