[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mozaic-daily"
version = "0.1.0"
description = "Automated daily forecasting for Mozilla Firefox metrics"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
